--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-json-minify": "^1.2.2",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "gulp-uglify-es": "^3.0.0"
+    "gulp-uglify-es": "^3.0.0",
+    "gulp-util": "^3.0.8"
   },
   "dependencies": {
     "gulp-imagemin": "^7.1.0",
