--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-json-minify": "^1.2.2",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^3.0.0",
-    "gulp-util": "^3.0.8"
-  },
-  "dependencies": {
-    "gulp-imagemin": "^7.1.0",
-    "sass": "^1.61.0"
+    "gulp-util": "^3.0.8",
+    "sass": "^1.62.1"
   }
 }
